--- a/bulma-blog-clean/category.html
+++ b/bulma-blog-clean/category.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet"> 
   </head>
   <body>
-    <!--  body content (hero-body > hero-head because nav == body in dimensions) -->
+    <!-- body content -->
     <div class="hero-body">
       <div class="container ">
 	<div class="columns is-multiline is-mobile is-centered">
