--- a/bulma-blog-clean/category.html
+++ b/bulma-blog-clean/category.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet"> 
   </head>
   <body>
-    <!-- body content -->
+    <!--  body content (hero-body > hero-head because nav == body in dimensions) -->
     <div class="hero-body">
       <div class="container ">
 	<div class="columns is-multiline is-mobile is-centered">
@@ -30,13 +30,13 @@
 		<a href="">Contact Page</a>
 	      </p>
 	    </aside>
-	    <!-- navigation -->
+	    <!-- end navigation -->
 	    <hr/>
 	    <!-- post categories -->
 	    <div class="nav-footer has-text-right">
-	      <p><i>Currently in <b><a href="">Field</a></b></i></p>
 	      <p><i><b><a href="">Field</a></b>, <a><b>Category</b></a>, <a><b>Empty</b></a></i></p>
 	    </div>
+	    <!-- end post categories -->
 	  </div>
 	  
 	  <!-- posts column -->
