--- a/bulma-blog-clean/post.html
+++ b/bulma-blog-clean/post.html
@@ -30,12 +30,13 @@
 		<a href="">Contact Page</a>
 	      </p>
 	    </aside>
-	    <!-- navigation -->
+	    <!-- end navigation -->
 	    <hr/>
 	    <!-- post categories -->
 	    <div class="nav-footer has-text-right">
 	      <p><i><b><a href="">Field</a></b>, <a><b>Category</b></a>, <a><b>Empty</b></a></i></p>
 	    </div>
+	    <!-- end post categories -->
 	  </div>
 
 	  <!-- posts column -->
