--- a/bulma-blog-clean/about.html
+++ b/bulma-blog-clean/about.html
@@ -41,7 +41,7 @@
 
 	  <!-- about column -->
 	  <div class="column is-8 is-offset-1 is-centered">
-	    <!-- start of content -->
+	    <!-- start of about -->
 	    <div class="header-content">
 	      <img src="http://placehold.it/900x200">
 	      <h1 class="title is-4">
@@ -57,7 +57,7 @@
 		<p><a class="button menu-label" href="">Back to Home</a></p>
 	      </div>
 	    </div>
-	    <!-- end of content -->
+	    <!-- end of about -->
 	  </div>
 	  <!--  end of about column -->
 	</div>
