missing info -cat

--- a/bulma-blog-clean/category.html
+++ b/bulma-blog-clean/category.html
@@ -34,6 +34,7 @@
 	    <hr/>
 	    <!-- post categories -->
 	    <div class="nav-footer has-text-right">
+	      <p><i>Currently in <b><a href="">Field</a></b></i></p>
 	      <p><i><b><a href="">Field</a></b>, <a><b>Category</b></a>, <a><b>Empty</b></a></i></p>
 	    </div>
 	    <!-- end post categories -->
