--- a/bulma-blog-darker/contact.html
+++ b/bulma-blog-darker/contact.html
@@ -130,7 +130,7 @@
 		      <div class="field">
 			<label class="label">Email</label>
 			<p class="control">
-			  <input class="input" type="text" placeholder="Email" value="">
+			  <input class="input" type="email" placeholder="Email" value="">
 			</p>
 		      </div>
 
