--- a/bulma-blog-darker/post.html
+++ b/bulma-blog-darker/post.html
@@ -219,7 +219,7 @@
 			  <strong>Barbara Middleton</strong>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.</p>
 			<small><a>Like</a> | <a>Reply</a> | 3 hrs</small>
-		      </div>>
+		      </div>
 
 		      <!-- start of sub-comment -->
 		      <article class="media">
