--- a/bulma-blog-labeler/index.html
+++ b/bulma-blog-labeler/index.html
@@ -60,7 +60,7 @@
 		<h4 class="title is-4">
 		  Python Has Some Problems I Like
 		  <span class="labels is-pulled-right">
-		    <a>Label 3</a>
+		    <a href="label.html">Label 3</a>
 		  </span>
 		</h4>		
 		<small>Posted by <a>Author</a> at 10:00am, February 25th 2010</small>
@@ -93,7 +93,7 @@
 		<h4 class="title is-4">
 		  Python Has Some Problems I Like
 		  <span class="labels is-pulled-right">
-		    <a>Label 3</a>
+		    <a href="label.html">Label 3</a>
 		  </span>
 		</h4>		
 		<small>Posted by <a>Author</a> at 10:00am, February 25th 2010</small>
@@ -126,7 +126,7 @@
 		<h4 class="title is-4">
 		  Python Has Some Problems I Like
 		  <span class="labels is-pulled-right">
-		    <a>Label 3</a>
+		    <a href="label.html">Label 3</a>
 		  </span>
 		</h4>		
 		<small>Posted by <a>Author</a> at 10:00am, February 25th 2010</small>
